[package]
name = "bili-analysis-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
regex = "1"
moka = { version = "0.12", features = ["sync"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
